--- a/rps.html
+++ b/rps.html
@@ -39,7 +39,28 @@
 
     <button
       onclick="
+      const randomNumber = Math.random();
+      playerMove = 'paper';
+
+      if (randomNumber < 1/3) {
+        computerMove = 'rock';
+      } else if (randomNumber < 2/3) {
+        computerMove = 'paper';
+      } else {
+        computerMove = 'scissors'
+      }
+
+      console.log(computerMove);
+
+      if (computerMove === playerMove) {
+        result = 'Tie'
+      } else if (computerMove === 'rock') {
+        result = 'You win!'
+      } else {
+        result = 'You loose. Sorry, try again'
+      } 
       
+      alert(`You picked ${playerMove}.\nComputer picked ${computerMove}.\nResult: ${result}`);
       "
     >
       PAPER
@@ -47,7 +68,28 @@
 
     <button
       onclick="
+      const randomNumber = Math.random();
+      playerMove = 'scissors';
 
+      if (randomNumber < 1/3) {
+        computerMove = 'rock';
+      } else if (randomNumber < 2/3) {
+        computerMove = 'paper';
+      } else {
+        computerMove = 'scissors'
+      }
+
+      console.log(computerMove);
+
+      if (computerMove === playerMove) {
+        result = 'Tie'
+      } else if (computerMove === 'paper') {
+        result = 'You win!'
+      } else {
+        result = 'You loose. Sorry, try again'
+      } 
+      
+      alert(`You picked ${playerMove}.\nComputer picked ${computerMove}.\nResult: ${result}`);
       "
     >
       SCISSORS
