--- a/rps.html
+++ b/rps.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -8,88 +8,66 @@
   <body>
     <p>Rock Paper Scissors</p>
 
-    <button
-      onclick="
-      playGame('rock')
-      "
-    >
-      ROCK
-    </button>
+    <button onclick="playGame('rock')">ROCK</button>
+
+    <button onclick="playGame('paper')">PAPER</button>
+
+    <button onclick="playGame('scissors')">SCISSORS</button>
 
     <button
       onclick="
-      playGame('paper')
+        score.wins = 0;
+        score.losses = 0;
+        score.ties = 0;
       "
     >
-      PAPER
-    </button>
-
-    <button
-      onclick="
-      playGame('scissors');
-      "
-    >
-      SCISSORS
+      RESET
     </button>
 
     <script>
-      let playerMove = "";
-      let result = "";
+      score = {
+        wins: 0,
+        losses: 0,
+        ties: 0,
+      };
 
       function playGame(playerMove) {
         const computerMove = pickComputerMove();
+        let result = "";
 
-        if ((playerMove = "scissors")) {
-          if (computerMove === playerMove) {
-            result = "Tie";
-          } else if (computerMove === "paper") {
-            result = "You win!";
-          } else {
-            result = "You loose. Sorry, try again";
-          }
-        } else if ((playerMove = "paper")) {
-          if ((playerMove = "scissors")) {
-            if (computerMove === playerMove) {
-              result = "Tie";
-            } else if (computerMove === "paper") {
-              result = "You win!";
-            } else {
-              result = "You loose. Sorry, try again";
-            }
-          }
-        } else if ((playerMove = "rock")) {
-          if ((playerMove = "scissors")) {
-            if (computerMove === playerMove) {
-              result = "Tie";
-            } else if (computerMove === "paper") {
-              result = "You win!";
-            } else {
-              result = "You loose. Sorry, try again";
-            }
-          }
+        if (playerMove === computerMove) {
+          result = "Tie";
+        } else if (
+          (playerMove === "rock" && computerMove === "scissors") ||
+          (playerMove === "paper" && computerMove === "rock") ||
+          (playerMove === "scissors" && computerMove === "paper")
+        ) {
+          result = "You win!";
+          score.wins++;
+        } else {
+          result = "You lose, try again.";
+          score.losses++;
+        }
+
+        if (result === "Tie") {
+          score.ties++;
         }
 
         alert(
-          `You picked ${playerMove}.\nComputer picked ${computerMove}.\nResult: ${result}`
+          `You picked ${playerMove}.\nComputer picked ${computerMove}.\nResult: ${result}\nWins: ${score.wins}, Losses: ${score.losses}, Ties: ${score.ties}`,
         );
       }
 
       function pickComputerMove() {
         const randomNumber = Math.random();
 
-        let computerMove = "";
-
-        playerMove = "scissors";
-
         if (randomNumber < 1 / 3) {
-          computerMove = "rock";
+          return "rock";
         } else if (randomNumber < 2 / 3) {
-          computerMove = "paper";
+          return "paper";
         } else {
-          computerMove = "scissors";
+          return "scissors";
         }
-
-        return computerMove;
       }
     </script>
   </body>
