Updated my code with DOM features

--- a/rps.html
+++ b/rps.html
@@ -14,12 +14,21 @@
 
     <button onclick="playGame('scissors')">SCISSORS</button>
 
+    <p class="js-result"></p>
+
+    <p class="js-moves"></p>
+
+    <p class="js-score"></p>
+
     <button
       onclick="
         score.wins = 0;
         score.losses = 0;
         score.ties = 0;
         localStorage.removeItem('score');
+        updateScoreElement();
+        document.querySelector('.js-result').innerHTML = '';
+        document.querySelector('.js-moves').innerHTML = '';
       "
     >
       RESET
@@ -31,6 +40,8 @@
         losses: 0,
         ties: 0,
       };
+
+      updateScoreElement();
 
       function playGame(playerMove) {
         const computerMove = pickComputerMove();
@@ -56,9 +67,17 @@
 
         localStorage.setItem("score", JSON.stringify(score));
 
-        alert(
-          `You picked ${playerMove}.\nComputer picked ${computerMove}.\nResult: ${result}\nWins: ${score.wins}, Losses: ${score.losses}, Ties: ${score.ties}`,
-        );
+        updateScoreElement();
+
+        document.querySelector(".js-result").innerHTML = result;
+
+        document.querySelector(".js-moves").innerHTML =
+          `You picked ${playerMove}.<br>Computer picked ${computerMove}.`;
+      }
+
+      function updateScoreElement() {
+        document.querySelector(".js-score").innerHTML =
+          `Wins: ${score.wins}, Losses: ${score.losses}, Ties: ${score.ties}`;
       }
 
       function pickComputerMove() {
